[gd_scene load_steps=18 format=2]

[ext_resource path="res://resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/decorations/BG.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/sprites/backgrounds/9patch_scroll3.png" type="Texture" id=3]
[ext_resource path="res://scenes/screens/CharacterCreation.gd" type="Script" id=4]
[ext_resource path="res://resources/h1_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/tools/Warning.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/EscapeKeyShortcut.tres" type="ShortCut" id=7]
[ext_resource path="res://scenes/panels/Logo.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/counters/Feature.tscn" type="PackedScene" id=9]
[ext_resource path="res://resources/underline_small.tres" type="StyleBox" id=10]
[ext_resource path="res://resources/sprites/buttons/PW.png" type="Texture" id=11]
[ext_resource path="res://resources/sprites/buttons/PWpressed.png" type="Texture" id=12]
[ext_resource path="res://resources/sprites/buttons/human.png" type="Texture" id=13]
[ext_resource path="res://resources/sprites/buttons/humanpressed.png" type="Texture" id=14]
[ext_resource path="res://scenes/panels/ArtesReference.tscn" type="PackedScene" id=15]




[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="CharacterCreation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GET" type="HTTPRequest" parent="."]

[node name="BG" parent="." instance=ExtResource( 2 )]

[node name="Logo" parent="." instance=ExtResource( 8 )]
margin_bottom = 250.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="CenterContainer"]
margin_left = 585.0
margin_top = 90.0
margin_right = 1335.0
margin_bottom = 990.0
rect_min_size = Vector2( 750, 900 )
texture = ExtResource( 3 )
patch_margin_left = 72
patch_margin_top = 89
patch_margin_right = 76
patch_margin_bottom = 82

[node name="Version" type="ItemList" parent="CenterContainer/NinePatchRect"]
anchor_right = 1.0
margin_left = 40.9025
margin_top = 10.0
margin_right = 0.902527
margin_bottom = 52.0
focus_mode = 0
custom_styles/bg = SubResource( 1 )
items = [ "v1", null, false, "v2", null, false ]
auto_height = true
max_columns = 6
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SheetInfo" type="VBoxContainer" parent="CenterContainer"]
margin_left = 765.0
margin_top = 127.0
margin_right = 1155.0
margin_bottom = 952.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewCharacter" type="Label" parent="CenterContainer/SheetInfo"]
margin_right = 390.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "NewCharacter"
align = 1

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/SheetInfo"]
margin_top = 33.0
margin_right = 390.0
margin_bottom = 43.0
custom_constants/separation = 10

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/SheetInfo"]
margin_top = 47.0
margin_right = 390.0
margin_bottom = 121.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer/SheetInfo/CenterContainer"]
margin_left = 79.0
margin_right = 311.0
margin_bottom = 74.0
columns = 2

[node name="ChronicleL" type="Label" parent="CenterContainer/SheetInfo/CenterContainer/GridContainer"]
margin_right = 78.0
margin_bottom = 22.0
text = "Crónica: "

[node name="Chronicle" type="LineEdit" parent="CenterContainer/SheetInfo/CenterContainer/GridContainer"]
margin_left = 82.0
margin_right = 232.0
margin_bottom = 22.0
rect_min_size = Vector2( 150, 0 )
align = 1

[node name="PlayerL" type="Label" parent="CenterContainer/SheetInfo/CenterContainer/GridContainer"]
margin_top = 26.0
margin_right = 78.0
margin_bottom = 48.0
text = "Jugador: "

[node name="Player" type="LineEdit" parent="CenterContainer/SheetInfo/CenterContainer/GridContainer"]
margin_left = 82.0
margin_top = 26.0
margin_right = 232.0
margin_bottom = 48.0
rect_min_size = Vector2( 150, 0 )
align = 1

[node name="NameL" type="Label" parent="CenterContainer/SheetInfo/CenterContainer/GridContainer"]
margin_top = 52.0
margin_right = 78.0
margin_bottom = 74.0
text = "Nombre: "

[node name="Name" type="LineEdit" parent="CenterContainer/SheetInfo/CenterContainer/GridContainer"]
margin_left = 82.0
margin_top = 52.0
margin_right = 232.0
margin_bottom = 74.0
rect_min_size = Vector2( 150, 0 )
align = 1

[node name="BlankSeparator" type="HSeparator" parent="CenterContainer/SheetInfo"]
margin_top = 125.0
margin_right = 390.0
margin_bottom = 175.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 50

[node name="ChooseL" type="Label" parent="CenterContainer/SheetInfo"]
margin_top = 179.0
margin_right = 390.0
margin_bottom = 201.0
text = "Tipo de personaje"
align = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/SheetInfo"]
margin_top = 205.0
margin_right = 390.0
margin_bottom = 215.0
custom_constants/separation = 10

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/SheetInfo"]
margin_top = 219.0
margin_right = 390.0
margin_bottom = 371.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer/SheetInfo/CenterContainer2"]
margin_right = 390.0
margin_bottom = 152.0
custom_constants/vseparation = 10
custom_constants/hseparation = 20
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HumanL" type="Label" parent="CenterContainer/SheetInfo/CenterContainer2/GridContainer"]
margin_right = 185.0
margin_bottom = 22.0
rect_min_size = Vector2( 185, 0 )
text = "Humano"
align = 1

[node name="PlanewalkerL" type="Label" parent="CenterContainer/SheetInfo/CenterContainer2/GridContainer"]
margin_left = 205.0
margin_right = 390.0
margin_bottom = 22.0
rect_min_size = Vector2( 185, 0 )
size_flags_horizontal = 4
text = "Caminante de planos"
align = 1

[node name="Human" type="TextureButton" parent="CenterContainer/SheetInfo/CenterContainer2/GridContainer"]
margin_top = 32.0
margin_right = 185.0
margin_bottom = 152.0
rect_min_size = Vector2( 120, 120 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
expand = true
stretch_mode = 5

[node name="Planewalker" type="TextureButton" parent="CenterContainer/SheetInfo/CenterContainer2/GridContainer"]
margin_left = 205.0
margin_top = 32.0
margin_right = 390.0
margin_bottom = 152.0
rect_min_size = Vector2( 120, 120 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="BlankSeparator2" type="HSeparator" parent="CenterContainer/SheetInfo"]
margin_top = 375.0
margin_right = 390.0
margin_bottom = 793.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 418

[node name="Exit" type="Button" parent="CenterContainer/SheetInfo"]
margin_left = 145.0
margin_top = 797.0
margin_right = 245.0
margin_bottom = 825.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 4
shortcut = ExtResource( 7 )
text = "Atras"
flat = true

[node name="SheetDescription" type="VBoxContainer" parent="CenterContainer"]
visible = false
margin_left = 658.0
margin_top = 127.0
margin_right = 1262.0
margin_bottom = 952.0
alignment = 1

[node name="DescriptionL" type="Label" parent="CenterContainer/SheetDescription"]
margin_right = 604.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "Descripción"
align = 1

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/SheetDescription"]
margin_top = 33.0
margin_right = 604.0
margin_bottom = 43.0
custom_constants/separation = 10

[node name="SpeciesCont" type="HBoxContainer" parent="CenterContainer/SheetDescription"]
margin_top = 47.0
margin_right = 604.0
margin_bottom = 69.0
alignment = 1

[node name="SpeciesL" type="Label" parent="CenterContainer/SheetDescription/SpeciesCont"]
margin_left = 150.0
margin_right = 220.0
margin_bottom = 22.0
text = "Especie: "

[node name="Species" type="LineEdit" parent="CenterContainer/SheetDescription/SpeciesCont"]
margin_left = 224.0
margin_right = 324.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
align = 1

[node name="AgeL" type="Label" parent="CenterContainer/SheetDescription/SpeciesCont"]
margin_left = 328.0
margin_right = 378.0
margin_bottom = 22.0
text = "Edad: "

[node name="Age" type="LineEdit" parent="CenterContainer/SheetDescription/SpeciesCont"]
margin_left = 382.0
margin_right = 454.0
margin_bottom = 22.0
rect_min_size = Vector2( 50, 0 )
align = 1

[node name="JobCont" type="HBoxContainer" parent="CenterContainer/SheetDescription"]
margin_top = 73.0
margin_right = 604.0
margin_bottom = 95.0
alignment = 1

[node name="JobL" type="Label" parent="CenterContainer/SheetDescription/JobCont"]
margin_left = 150.0
margin_right = 240.0
margin_bottom = 22.0
text = "Profesión: "

[node name="Job" type="LineEdit" parent="CenterContainer/SheetDescription/JobCont"]
margin_left = 244.0
margin_right = 454.0
margin_bottom = 22.0
rect_min_size = Vector2( 210, 0 )
align = 1

[node name="BlankSeparator3" type="HSeparator" parent="CenterContainer/SheetDescription"]
margin_top = 99.0
margin_right = 604.0
margin_bottom = 129.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 30

[node name="GridDescription" type="GridContainer" parent="CenterContainer/SheetDescription"]
margin_top = 133.0
margin_right = 604.0
margin_bottom = 489.0
columns = 2

[node name="LooksL" type="Label" parent="CenterContainer/SheetDescription/GridDescription"]
margin_right = 300.0
margin_bottom = 22.0
text = "Rasgos"

[node name="PersonalityL" type="Label" parent="CenterContainer/SheetDescription/GridDescription"]
margin_left = 304.0
margin_right = 604.0
margin_bottom = 22.0
text = "Personalidad"

[node name="Looks" type="TextEdit" parent="CenterContainer/SheetDescription/GridDescription"]
margin_top = 26.0
margin_right = 300.0
margin_bottom = 176.0
rect_min_size = Vector2( 300, 150 )
wrap_enabled = true

[node name="Personality" type="TextEdit" parent="CenterContainer/SheetDescription/GridDescription"]
margin_left = 304.0
margin_top = 26.0
margin_right = 604.0
margin_bottom = 176.0
rect_min_size = Vector2( 300, 150 )
wrap_enabled = true

[node name="PastL" type="Label" parent="CenterContainer/SheetDescription/GridDescription"]
margin_top = 180.0
margin_right = 300.0
margin_bottom = 202.0
text = "Pasado"

[node name="MotivationL" type="Label" parent="CenterContainer/SheetDescription/GridDescription"]
margin_left = 304.0
margin_top = 180.0
margin_right = 604.0
margin_bottom = 202.0
text = "Motivación"

[node name="Past" type="TextEdit" parent="CenterContainer/SheetDescription/GridDescription"]
margin_top = 206.0
margin_right = 300.0
margin_bottom = 356.0
rect_min_size = Vector2( 300, 150 )
wrap_enabled = true

[node name="Motivation" type="TextEdit" parent="CenterContainer/SheetDescription/GridDescription"]
margin_left = 304.0
margin_top = 206.0
margin_right = 604.0
margin_bottom = 356.0
rect_min_size = Vector2( 300, 150 )
wrap_enabled = true

[node name="BlankSeparator4" type="HSeparator" parent="CenterContainer/SheetDescription"]
margin_top = 493.0
margin_right = 604.0
margin_bottom = 793.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 300

[node name="ButtonsCont" type="HBoxContainer" parent="CenterContainer/SheetDescription"]
margin_top = 797.0
margin_right = 604.0
margin_bottom = 825.0
alignment = 1

[node name="Back" type="Button" parent="CenterContainer/SheetDescription/ButtonsCont"]
margin_left = 200.0
margin_right = 300.0
margin_bottom = 28.0
rect_min_size = Vector2( 100, 0 )
text = "Atras"
flat = true

[node name="Next" type="Button" parent="CenterContainer/SheetDescription/ButtonsCont"]
margin_left = 304.0
margin_right = 404.0
margin_bottom = 28.0
rect_min_size = Vector2( 100, 0 )
text = "Siguiente"
flat = true

[node name="SheetAtributes" type="VBoxContainer" parent="CenterContainer"]
visible = false
margin_left = 735.0
margin_top = 224.0
margin_right = 1185.0
margin_bottom = 855.0

[node name="AtrubutesL" type="Label" parent="CenterContainer/SheetAtributes"]
margin_right = 450.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "Atributos"
align = 1

[node name="HSeparator4" type="HSeparator" parent="CenterContainer/SheetAtributes"]
margin_top = 33.0
margin_right = 450.0
margin_bottom = 43.0
custom_constants/separation = 10

[node name="Atributes" type="HBoxContainer" parent="CenterContainer/SheetAtributes"]
margin_top = 47.0
margin_right = 450.0
margin_bottom = 47.0
custom_constants/separation = 20

[node name="BlankSeparator" type="HSeparator" parent="CenterContainer/SheetAtributes"]
margin_top = 51.0
margin_right = 450.0
margin_bottom = 81.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 30

[node name="Instructions" type="Label" parent="CenterContainer/SheetAtributes"]
margin_top = 85.0
margin_right = 450.0
margin_bottom = 132.0
rect_min_size = Vector2( 450, 0 )
text = "Tienes 6/4/2 niveles para repartir entre atributos de cada tipo + 1 a poner donde quieras"
autowrap = true

[node name="BlankSeparator2" type="HSeparator" parent="CenterContainer/SheetAtributes"]
margin_top = 136.0
margin_right = 450.0
margin_bottom = 599.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 463

[node name="ButtonsCont" type="HBoxContainer" parent="CenterContainer/SheetAtributes"]
margin_top = 603.0
margin_right = 450.0
margin_bottom = 631.0
alignment = 1

[node name="Back" type="Button" parent="CenterContainer/SheetAtributes/ButtonsCont"]
margin_left = 123.0
margin_right = 223.0
margin_bottom = 28.0
rect_min_size = Vector2( 100, 0 )
text = "Atras"
flat = true

[node name="Next" type="Button" parent="CenterContainer/SheetAtributes/ButtonsCont"]
margin_left = 227.0
margin_right = 327.0
margin_bottom = 28.0
rect_min_size = Vector2( 100, 0 )
text = "Siguiente"
flat = true

[node name="SheetSkills" type="VBoxContainer" parent="CenterContainer"]
visible = false
margin_left = 735.0
margin_top = 128.0
margin_right = 1185.0
margin_bottom = 952.0

[node name="SkillsL" type="Label" parent="CenterContainer/SheetSkills"]
margin_right = 450.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "Habilidades"
align = 1

[node name="HSeparator4" type="HSeparator" parent="CenterContainer/SheetSkills"]
margin_top = 33.0
margin_right = 450.0
margin_bottom = 43.0
custom_constants/separation = 10

[node name="Skills" type="HBoxContainer" parent="CenterContainer/SheetSkills"]
margin_top = 47.0
margin_right = 450.0
margin_bottom = 662.0
rect_min_size = Vector2( 0, 615 )
custom_constants/separation = 20

[node name="BlankSeparator3" type="HSeparator" parent="CenterContainer/SheetSkills"]
margin_top = 666.0
margin_right = 450.0
margin_bottom = 681.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 15

[node name="Instructions" type="Label" parent="CenterContainer/SheetSkills"]
margin_top = 685.0
margin_right = 450.0
margin_bottom = 732.0
rect_min_size = Vector2( 450, 0 )
text = "Tienes 30 puntos para repartir como quieras. Cada círculo cuesta el nivel correspondiente en puntos."
autowrap = true

[node name="PointsLeft" type="Label" parent="CenterContainer/SheetSkills"]
margin_top = 736.0
margin_right = 450.0
margin_bottom = 758.0
rect_min_size = Vector2( 450, 0 )
text = "Quedan 30 puntos"
align = 1
autowrap = true

[node name="BlankSeparator" type="HSeparator" parent="CenterContainer/SheetSkills"]
margin_top = 762.0
margin_right = 450.0
margin_bottom = 792.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 30

[node name="ButtonsCont" type="HBoxContainer" parent="CenterContainer/SheetSkills"]
margin_top = 796.0
margin_right = 450.0
margin_bottom = 824.0
alignment = 1

[node name="Back" type="Button" parent="CenterContainer/SheetSkills/ButtonsCont"]
margin_left = 123.0
margin_right = 223.0
margin_bottom = 28.0
rect_min_size = Vector2( 100, 0 )
text = "Atras"
flat = true

[node name="Next" type="Button" parent="CenterContainer/SheetSkills/ButtonsCont"]
margin_left = 227.0
margin_right = 327.0
margin_bottom = 28.0
rect_min_size = Vector2( 100, 0 )
text = "Siguiente"
flat = true

[node name="SheetPlaneManipulation" type="VBoxContainer" parent="CenterContainer"]
visible = false
margin_left = 719.0
margin_top = 127.0
margin_right = 1201.0
margin_bottom = 952.0

[node name="PlaneManipulationL" type="Label" parent="CenterContainer/SheetPlaneManipulation"]
margin_right = 482.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "Manipulación de planos"
align = 1

[node name="HSeparator5" type="HSeparator" parent="CenterContainer/SheetPlaneManipulation"]
margin_top = 33.0
margin_right = 482.0
margin_bottom = 43.0
custom_constants/separation = 10

[node name="CenterData" type="CenterContainer" parent="CenterContainer/SheetPlaneManipulation"]
margin_top = 47.0
margin_right = 482.0
margin_bottom = 147.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer/SheetPlaneManipulation/CenterData"]
margin_left = 107.0
margin_right = 375.0
margin_bottom = 100.0
custom_constants/hseparation = 30
columns = 2

[node name="ModusL" type="Label" parent="CenterContainer/SheetPlaneManipulation/CenterData/GridContainer"]
margin_right = 88.0
margin_bottom = 22.0
text = "Modo: "

[node name="Modus" type="LineEdit" parent="CenterContainer/SheetPlaneManipulation/CenterData/GridContainer"]
margin_left = 118.0
margin_right = 268.0
margin_bottom = 22.0
rect_min_size = Vector2( 150, 0 )
align = 1

[node name="ViaL" type="Label" parent="CenterContainer/SheetPlaneManipulation/CenterData/GridContainer"]
margin_top = 26.0
margin_right = 88.0
margin_bottom = 48.0
text = "Vía: "

[node name="Via" type="OptionButton" parent="CenterContainer/SheetPlaneManipulation/CenterData/GridContainer"]
margin_left = 118.0
margin_top = 26.0
margin_right = 268.0
margin_bottom = 48.0
text = "Via"

[node name="AspectL" type="Label" parent="CenterContainer/SheetPlaneManipulation/CenterData/GridContainer"]
margin_top = 52.0
margin_right = 88.0
margin_bottom = 74.0
text = "Aspectos: "

[node name="Aspect1" type="LineEdit" parent="CenterContainer/SheetPlaneManipulation/CenterData/GridContainer"]
margin_left = 118.0
margin_top = 52.0
margin_right = 268.0
margin_bottom = 74.0
rect_min_size = Vector2( 150, 0 )
align = 1

[node name="Blank" type="Label" parent="CenterContainer/SheetPlaneManipulation/CenterData/GridContainer"]
margin_top = 78.0
margin_right = 88.0
margin_bottom = 100.0

[node name="Aspect2" type="LineEdit" parent="CenterContainer/SheetPlaneManipulation/CenterData/GridContainer"]
margin_left = 118.0
margin_top = 78.0
margin_right = 268.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 0 )
align = 1

[node name="Journey" parent="CenterContainer/SheetPlaneManipulation" instance=ExtResource( 9 )]
margin_top = 151.0
margin_right = 482.0
margin_bottom = 197.0
ability_name = "Viaje"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/SheetPlaneManipulation"]
margin_top = 201.0
margin_right = 482.0
margin_bottom = 205.0
custom_styles/separator = ExtResource( 10 )

[node name="InstructionsAccessL" type="Label" parent="CenterContainer/SheetPlaneManipulation"]
margin_top = 209.0
margin_right = 482.0
margin_bottom = 231.0
text = "Reparte puntos"
align = 1
valign = 1

[node name="CenterAccess" type="CenterContainer" parent="CenterContainer/SheetPlaneManipulation"]
margin_top = 235.0
margin_right = 482.0
margin_bottom = 381.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer/SheetPlaneManipulation/CenterAccess"]
margin_right = 482.0
margin_bottom = 146.0
columns = 3

[node name="Blank" type="Label" parent="CenterContainer/SheetPlaneManipulation/CenterAccess/GridContainer"]
margin_top = 12.0
margin_right = 158.0
margin_bottom = 34.0

[node name="Ego" parent="CenterContainer/SheetPlaneManipulation/CenterAccess/GridContainer" instance=ExtResource( 9 )]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 46.0
editable = true
ability_name = "Ego"

[node name="Blank2" type="Label" parent="CenterContainer/SheetPlaneManipulation/CenterAccess/GridContainer"]
margin_left = 324.0
margin_top = 12.0
margin_right = 482.0
margin_bottom = 34.0

[node name="Scientia" parent="CenterContainer/SheetPlaneManipulation/CenterAccess/GridContainer" instance=ExtResource( 9 )]
margin_top = 50.0
margin_right = 158.0
margin_bottom = 96.0
editable = true
ability_name = "Scientia"

[node name="AccessL" type="Label" parent="CenterContainer/SheetPlaneManipulation/CenterAccess/GridContainer"]
margin_left = 162.0
margin_top = 58.0
margin_right = 320.0
margin_bottom = 87.0
custom_fonts/font = ExtResource( 5 )
text = "Access"
align = 1
valign = 1

[node name="Opus" parent="CenterContainer/SheetPlaneManipulation/CenterAccess/GridContainer" instance=ExtResource( 9 )]
margin_left = 324.0
margin_top = 50.0
margin_right = 482.0
margin_bottom = 96.0
editable = true
ability_name = "Opus"

[node name="Blank3" type="Label" parent="CenterContainer/SheetPlaneManipulation/CenterAccess/GridContainer"]
margin_top = 112.0
margin_right = 158.0
margin_bottom = 134.0

[node name="Quod" parent="CenterContainer/SheetPlaneManipulation/CenterAccess/GridContainer" instance=ExtResource( 9 )]
margin_left = 162.0
margin_top = 100.0
margin_right = 320.0
margin_bottom = 146.0
editable = true
ability_name = "Quod"

[node name="Blank4" type="Label" parent="CenterContainer/SheetPlaneManipulation/CenterAccess/GridContainer"]
margin_left = 324.0
margin_top = 112.0
margin_right = 482.0
margin_bottom = 134.0

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/SheetPlaneManipulation"]
margin_top = 385.0
margin_right = 482.0
margin_bottom = 405.0
custom_styles/separator = ExtResource( 10 )
custom_constants/separation = 20

[node name="ArtesL" type="Label" parent="CenterContainer/SheetPlaneManipulation"]
margin_top = 409.0
margin_right = 482.0
margin_bottom = 438.0
custom_fonts/font = ExtResource( 5 )
text = "Artes"
align = 1
valign = 1

[node name="InstructionsArtesL" type="Label" parent="CenterContainer/SheetPlaneManipulation"]
margin_top = 442.0
margin_right = 482.0
margin_bottom = 464.0
text = "Reparte puntos"
align = 1
valign = 1

[node name="CenterArtes" type="CenterContainer" parent="CenterContainer/SheetPlaneManipulation"]
margin_top = 468.0
margin_right = 482.0
margin_bottom = 669.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Artes" type="GridContainer" parent="CenterContainer/SheetPlaneManipulation/CenterArtes"]
margin_left = 241.0
margin_right = 241.0
margin_bottom = 201.0
rect_min_size = Vector2( 0, 201 )
custom_constants/vseparation = 30
custom_constants/hseparation = 20
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlankSeparator3" type="HSeparator" parent="CenterContainer/SheetPlaneManipulation"]
margin_top = 673.0
margin_right = 482.0
margin_bottom = 793.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 120

[node name="ButtonsCont" type="HBoxContainer" parent="CenterContainer/SheetPlaneManipulation"]
margin_top = 797.0
margin_right = 482.0
margin_bottom = 825.0
alignment = 1

[node name="Back" type="Button" parent="CenterContainer/SheetPlaneManipulation/ButtonsCont"]
margin_left = 139.0
margin_right = 239.0
margin_bottom = 28.0
rect_min_size = Vector2( 100, 0 )
text = "Atras"
flat = true

[node name="Finish" type="Button" parent="CenterContainer/SheetPlaneManipulation/ButtonsCont"]
margin_left = 243.0
margin_right = 343.0
margin_bottom = 28.0
rect_min_size = Vector2( 100, 0 )
text = "Fin"
flat = true

[node name="Warning" parent="." instance=ExtResource( 6 )]
margin_right = 250.0
margin_bottom = 93.0
rect_min_size = Vector2( 500, 100 )

[node name="ArtesReference" parent="." instance=ExtResource( 15 )]
[connection signal="item_selected" from="CenterContainer/NinePatchRect/Version" to="." method="_on_Version_item_selected"]
[connection signal="pressed" from="CenterContainer/SheetInfo/CenterContainer2/GridContainer/Human" to="." method="_on_Human_pressed"]
[connection signal="pressed" from="CenterContainer/SheetInfo/CenterContainer2/GridContainer/Planewalker" to="." method="_on_Planewalker_pressed"]
[connection signal="pressed" from="CenterContainer/SheetInfo/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="CenterContainer/SheetDescription/ButtonsCont/Back" to="." method="info_phase"]
[connection signal="pressed" from="CenterContainer/SheetDescription/ButtonsCont/Next" to="." method="atributes_phase"]
[connection signal="pressed" from="CenterContainer/SheetAtributes/ButtonsCont/Back" to="." method="description_phase"]
[connection signal="pressed" from="CenterContainer/SheetAtributes/ButtonsCont/Next" to="." method="skills_phase"]
[connection signal="pressed" from="CenterContainer/SheetSkills/ButtonsCont/Back" to="." method="atributes_phase"]
[connection signal="pressed" from="CenterContainer/SheetSkills/ButtonsCont/Next" to="." method="plane_manipulation_phase"]
[connection signal="item_selected" from="CenterContainer/SheetPlaneManipulation/CenterData/GridContainer/Via" to="." method="_on_Via_item_selected"]
[connection signal="pressed" from="CenterContainer/SheetPlaneManipulation/ButtonsCont/Back" to="." method="skills_phase"]
[connection signal="pressed" from="CenterContainer/SheetPlaneManipulation/ButtonsCont/Finish" to="." method="finish"]
